# ai-health

./: .gitignore  README.md  pyproject.toml
diagnosis/assignments/Week1/: C1M1_Assignment.ipynb  C1M1_Assignment_solution-Copy1.ipynb
diagnosis/assignments/Week2/: C1M2_Assignment.ipynb
diagnosis/experiments/: chest-xray.ipynb
diagnosis/week-1/: AI4M_C1_W1_lecture_ex_01.ipynb
segmentation/unet/: unet-tf-train.ipynb
segmentation/unet/tensorflow/: parts.py  unet.py
segmentation/unet2d/: data.py  unet-tf-train.ipynb
segmentation/unet2d/models/tensorflow/: unet.py
study/: README.md
study/diagnosis/assignments/: README.md
study/diagnosis/assignments/Week3/: util.py
