[tool.poetry]
name = "ai-for-medicine"
version = "0.1.0"
description = ""
authors = ["geertklop <geertklop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.5"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
itk = "^5.1.2"
itkwidgets = "^0.32.0"
ipywidgets = "^7.5.1"
tensorflow = "^1.15.0"
nibabel = "^3.2.1"
opencv-python = "^4.5.1"
imageio = "^2.9.0"
Keras = "2.3.1"
scikit-learn = "^0.24.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
jupyterlab = "^2.2.9"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
