[tool.poetry]
name = "ai-for-medicine"
version = "0.1.0"
description = ""
authors = ["geertklop <geertklop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.6"
numpy = "^1.19.0"
pandas = "^1.1.5"
matplotlib = "^3.3.3"
seaborn = "^0.11.0"
itk = "^5.1.2"
itkwidgets = "^0.32.0"
ipywidgets = "^7.5.1"
nibabel = "^3.2.1"
opencv-python = "^4.5.1"
imageio = "^2.9.0"
scikit-learn = "^0.24.0"
tensorflow = "^2.4.0"
tensorflow-datasets = "^4.2.0"
Keras = "2.3.1"

[tool.poetry.dev-dependencies]
ipykernel = "^5.4.2"
jupyterlab = "^2.2.9"
black = "^20.8b1"
mypy = "^0.800"
flake8 = "^3.8.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
